src/objects/vlocity_ins__ContractTypeTerm__c.object
<CustomObject>
    <description>Represents assignment of contract terms to a Contract Type. When a contract record of a particular contract type is created, it automatically inherits contract terms of the contract type.</description>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractTypeId__c</fullName>
        <label>Contract Document</label>
        <referenceTo>vlocity_ins__ContractType__c</referenceTo>
        <relationshipLabel>Contract Type Terms</relationshipLabel>
        <relationshipName>ContractTypeTerms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TermSpecProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Type Terms</relationshipLabel>
        <relationshipName>ContractTypeTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Type Term</label>
    <nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractTypeTerms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>